--- a/src/Pages/Status/Status.module.css
+++ b/src/Pages/Status/Status.module.css
@@ -10,7 +10,7 @@
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  width: 80vw;
+  width: 100%;
 }
 
 .tableContainer {
